--- a/views/index.pug
+++ b/views/index.pug
@@ -4,10 +4,11 @@ block content
   a-scene
     a-assets
       img#city(crossorigin src='https://cdn.aframe.io/360-image-gallery-boilerplate/img/city.jpg')
-      img#cubes-thumb(crossorigin src='https://cdn.aframe.io/360-image-gallery-boilerplate/img/thumb-cubes.jpg')
+      each p in products
+        img(id='product'+p.id crossorigin src=p.sampleImageUrl)
 
     a-sky#image-360(radius='30' src='#city')
 
-    a-entity(layout='type: box; columns: 28; plane: xy; margin: 1.5' position='-20 -15 -7')
-      each n in new Array(760)
-        a-entity(geometry='primitive: plane; height: 1; width: 1' material='shader: flat; src: #cubes-thumb')
+    a-entity(layout='type: box; columns: 1; plane: xy; margin: 1.4' position='0 -30 -7')
+      each p in products
+        a-entity(geometry='primitive: plane; height: 1; width: 1' material='shader: flat; src: #product'+p.id)
